assets/css/style.css
/* ... */
.contact_input:hover {
  border-color: var(--first-color);
}


.contact_input::placeholder {
  color: var(--text-color);
  opacity: 0.8;
}

.contact_input:focus {
  border-color: var(--first-color-alt);
  outline: none;
}

.textarea.contact_input {
  min-height: 10rem;
  resize: vertical;
}

.contact_message {
  font-size: var(--small-font-size);
  color: var(--first-color);
  text-align: center;
}

.contact_button {
  padding: 0.75rem 2rem;
  justify-self: center;
}



/*=============== FOOTER ===============*/
.footer {
  background-color: var(--container-color);
  padding-block: 3.5rem 2rem;
}

.footer_container {
  text-align: center;
  row-gap: 2rem;
}

.footer_title {
  font-size: var(--h1-font-size);
  font-weight: var(--font-semi-bold);
  margin-bottom: .25rem;
}

.footer_title span {
  color: var(--first-color);
}

.footer_education {
  font-size: var(--normal-font-size);
}

.footer_social {
  display: flex;
  justify-content: center;
  column-gap: 1.25rem;
}

.footer_social-link {
  display: flex;
  background-color: var(--first-color-alt);
  padding: .5rem;
  color: var(--title-color);
  font-size: 1.5rem;
  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
  transition: transform .4s;
}

.footer_social-link:hover {
  transform: translateY(-.25rem);
  background-color: var(--first-color);
}

.footer_copy {
  font-size: var(--smaller-font-size);
  margin-top: 2rem;
}


/*=============== SCROLL BAR ===============*/
::-webkit-scrollbar {
  width: .6rem;
  border-radius: .5rem;
  background-color: hsl(228, 12%, 25%);
}

::-webkit-scrollbar-thumb {
  background-color: hsl(228, 8%, 35%);
  border-radius: .5rem;
}

::-webkit-scrollbar-thumb:hover {
  background-color: hsl(228, 8%, 45%);
}

/*=============== SCROLL UP ===============*/
.scrollup {
  position: fixed;
  right: 1rem;
  bottom: -50%;
  background-color: var(--body-color);
  padding: 6px;
  display: inline-flex;
  border-radius: .25rem;
  color: var(--first-color);
  font-size: 1.25rem;
  box-shadow: 0 4px 12px hsla(228, 15%, 8%, .4);
  z-index: var(--z-tooltip);
  transition: bottom .4s, transform .4s;
}

.scrollup:hover {
  transform: translateY(-.25rem);
}

/* Show Scroll Up */
.show-scroll {
  bottom: 3rem;
}

/*=============== BREAKPOINTS ===============*/
/* For small devices */
@media screen and (max-width: 320px) {
  .container {
    margin-inline: 1rem;
  }

  .skills_content {
      grid-template-columns: max-content;
      row-gap: 1rem;
  }
  
  .skills_item {
      gap: 0.5rem;
      font-size: 0.875rem;
  }

  .services_card {
    padding-block: 1.5rem;;
  }
}
/* For medium devices */
@media screen and (min-width: 576px){
  .home_container,
  .about_container,
  .skills_container,
  .services_container,
  .projects_container,
  .contact_container {
    grid-template-columns: 360px;
    justify-content: center;
  }
}

@media screen and (min-width: 768px) {
  .nav_menu {
    width: 55%;
  }

  .home_container,
  .about_container,
  .skills_container {
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
  }
   
  .home_data,
  .about_data,
  .skills_data,
  :is(.about_data, .skills_data) :is(.section_subtitle, .section_title) {
    text-align: initial;
  }

  .home_social {
    justify-content: initial;
  }

  .home_blob,
  .about_blob {
    width: 400px;
  }

  .about_data {
    order: 1;
  }

  .skills_item {
        gap: 1rem;
    }

  .experience_timeline {
    max-width: 700px;
    margin-inline: auto;
  }

  .services_container,
  .projects_container {
    grid-template-columns: repeat(2, 352px);
  }

  .contact_group {
    grid-template-columns: repeat(2, 1fr);
    gap: 1.5rem;
  }

}

/* For large devices */
@media screen and (min-width: 1023px) {
  .section {
    padding-block: 7rem 2rem;
  }
  .section_subtitle {
    font-size: var(--normal-font-size);
  }
  
  .nav{
    height: calc(var(--header-height) + 1.5rem);
  }
  .nav_close,
  .nav_toggle {
    display: none;
  }
  .nav_list {
    flex-direction: row;
    column-gap: 3rem;
  }
  .nav_menu {
    width: initial;
  }

  .blur-header::after {
    backdrop-filter: blur(25px);
    -webkit-backdrop-filter: blur(25px);
  }
}
/* ... */

